--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
+    "express-validator": "^6.14.0",
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
+    "mongoose": "^6.0.14",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
